[package]
name = "rss-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rss_server"

[dependencies]
actix-web = "4.0.0-beta.15"
feed-rs = "1.0.0"
reqwest = "0.11.8"
serde = "1.0.132"
serde_json = "1.0.73"

[features]

[dev-dependencies]
actix-rt = "2.5.0"
tokio = "1.15.0"
