[package]
name = "rss-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rss_server"

[dependencies]
actix-web = "4.0.1"
config = "0.11.0"
env_logger = "0.9.0"
feed-rs = "1.0.0"
log = "0.4.14"
reqwest = "0.11.9"
serde = "1.0.136"
serde_json = "1.0.73"

[features]

[dev-dependencies]
actix-rt = "2.5.0"
tokio = "1.15.0"
